--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ button:hover{
         width: 100%;
         height: auto;
         font-size:12px ;
+        down: 0;
+        high:  0;
     }
 }
 
