--- a/style.css
+++ b/style.css
@@ -110,3 +110,31 @@ button:hover{
      
     }
 }
+
+
+@media (max-width:641px){
+    body{
+        font-size: 12px;
+    }
+
+    .main-content h2{
+        font-size: 0.8em;
+    }
+
+    .main-content h3{
+        font-size: 1.4em;
+    }
+}
+
+@media (max-width:300px){
+    body{
+        font-size: 10px;
+     
+    }
+}
+@media (max-width:1300px){
+    .banner image{
+        position: 100vh;
+    }
+}    
+    .
